# test-cookie-cutter

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: index.md
tdsfabricmodule/: __init__.py  dataset.py  features.py  plots.py
tdsfabricmodule/modeling/: predict.py  train.py
