[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tdsfabricmodule"
version = "0.0.1"
description = "Test project created by cookiecutter"
authors = [
  { name = "HPC" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["tdsfabricmodule"]
include = ["pyproject.toml", "tdsfabricmodule/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tdsfabricmodule"]
force-sort-within-sections = true

